{
  "sourceLanguage" : "zh-Hans",
  "strings" : {
    "%lld 条" : {},
    "%lld 首" : {},
    "%lld 首 · 第%lld课起" : {},
    "一小节" : {},
    "两小节" : {},
    "中音" : {},
    "乐曲" : {},
    "从吹孔数起，按 %@ 孔" : {},
    "低音" : {},
    "倍高音" : {},
    "停止" : {},
    "入门" : {},
    "全开" : {},
    "全按" : {},
    "全部" : {},
    "关掉节拍时，预备拍照样出声" : {},
    "减慢" : {},
    "加快" : {},
    "半孔" : {},
    "半按 %@ 孔" : {},
    "吹孔在左" : {},
    "外观" : {},
    "开始" : {},
    "急吹" : {},
    "或" : {},
    "打开" : {},
    "按住" : {},
    "搜索" : {},
    "搜索曲目和词典" : {},
    "无" : {},
    "暂停" : {},
    "曲库无法打开" : {},
    "曲谱无法打开" : {},
    "每分钟 %lld 拍" : {},
    "浅色" : {},
    "深色" : {},
    "点结束小节" : {},
    "点起始小节" : {},
    "示范" : {},
    "第 %lld 小节" : {},
    "第 %lld–%lld 小节" : {},
    "第%lld课" : {},
    "练习" : {},
    "缓吹" : {},
    "节拍" : {},
    "设置" : {},
    "词典" : {},
    "词典还没有内容" : {},
    "请稍后重新打开应用" : {},
    "超吹" : {},
    "跟随系统" : {},
    "这首曲谱的数据有误，请先练习其他曲目" : {},
    "进阶" : {},
    "选段" : {},
    "速度" : {},
    "预备拍" : {},
    "高音" : {},
    "；或" : {}
  },
  "version" : "1.0"
}
